ns/tools/imagechecker/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagechecker
  namespace: tools
spec: 
  replicas: 1
  template:
    spec:
      serviceAccountName: imagechecker
      containers:
      - name: imagechecker
        image: jonas27/imagechecker
        ports:
        - name: http
          containerPort: 8080
      restartPolicy: Always
