ns/tools/imagechecker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imagechecker
  namespace: tools
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
